--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -3,6 +3,12 @@ name = "rust"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+futures = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.12.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+hyper = { version = "1", features = ["full"] }
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
